2009-05-06  Vivien Malerba <malerba@gnome-db.org>

	* tools/Makefile.am: install web server data files in the same dir as
	Libgda 4.0, for bug #580821

2009-05-06  Vivien Malerba <malerba@gnome-db.org>

	* providers/oracle:
	  - use the callback API to fetch results for variable length data types
	  - implemented more meta data retreival
	  - booleans (which is not an Oracle data type) are interpreted as 0 an !0
	  - better handling of OCI types
	* libgda/gda-data-meta-wrapper.c: bug fixes
	* libgda/gda-meta-store.c: bug fixes
	* providers/postgres/gda-postgres-meta.c: bug fixes

2009-05-05  Vivien Malerba <malerba@gnome-db.org>

	* libgda/gda-sql-builder.c:
	* libgda/gda-tree-manager.c:
	* libgda/gda-tree-node.c:
	* libgda/gda-tree.c:
	* libgda/thread-wrapper/gda-thread-wrapper.c: applied patch to fix bug #581408
	(thanks to Halton Huo)

2009-05-01  Vivien Malerba <malerba@gnome-db.org>

	* libgda/Makefile.am:
	* libgda/gda-data-meta-wrapper.[ch]: new (private) GdaDataModel wrapper internally
	used by the GdaMetaStore object
	* libgda/gda-data-access-wrapper.h: removed unnecessary #include
	* libgda/gda-enums.h: added the GdaSqlIdentifierStyle enum
	* libgda/gda-meta-store.[ch]:
	  - use the new GdaDataMetaWrapper object to "filter" the
	    updates made by each database provider when updating the meta data
	  - added gda_meta_store_set_identifiers_style(), to be used by database providers
	* libgda/gda-meta-struct.c: updates the way information is searced in the GdaMetaStore
	* libgda/information_schema.xml: identify which columns are SQL identifiers
	* libgda/gda-util.c: improved the gda_completion_list_get() function
	* tools/tools-input.c: correctly set break characters for completion
	* libgda/sql-parser/gda-statement-struct-util.c: corrected gda_sql_identifier_needs_quotes()
	* doc/C: SQL identifiers precisions

2009-04-28  Vivien Malerba <malerba@gnome-db.org>

	* libgda.doap: prefixed mail with "mailto:"
	* tools/gda-sql.c: